# pydata-april-2026

./: .gitignore  README.md  alembic.ini  app.py  generate_data.py  mise.toml  post_data.py  presentation.md  pyproject.toml  test_bench.avro  test_data.avro  test_data.avsc  test_data.json  test_data.msgpack
migrations/: env.py
migrations/versions/: 1a17979a758a_setup_db.py  dfc3704b0e83_setup_db.py
notebooks/: benchmarking.py  presentation.py  warehouse.py
web/: app.py
