[project]
name = "pydata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "duckdb>=1.5.2",
    "faker>=40.13.0",
    "fastavro>=1.12.1",
    "litestar[standard]>=2.21.1",
    "marimo>=0.23.1",
    "msgpack>=1.1.2",
    "orjson>=3.11.8",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "sqlalchemy>=2.0.49",
    "ujson>=5.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.30",
]
